--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,15 @@ services:
         volumes:
             - "./:/code"
         command: python manage.py runserver 0.0.0.0:8000
-        # depends_on:
-        #     - db
-    # db:
-    #     image: postgres:11
+        depends_on:
+            - db
+        tty: true
+    db:
+        image: postgres:11
+        container_name: myapp-db
+        environment:
+            - POSTGRES_USER=soma
+            - POSTGRES_PASSWORD=soma
+            - POSTGRES_DB=test_db
+        volumes:
+            - ./database:/var/lib/postgresql/
